Third attempt at fixing overflow of resume.
- Alter overflow attribute value from inherit to scroll for the resume
content class.

--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,7 @@ body {
 	#slide-4 .resume {
     height: inherit;
 		width: inherit;
-    overflow: inherit;
+    overflow: scroll;
     position: inherit;
 	}
 
